Add dummy "room" parameter to dungeon.
Preparation for multiple room support.
