# dungeon/main.py
@@ -1,5 +1,5 @@
 import connexion
-import room
+import rooms
 import cherrypy
 
 
@@ -7,7 +7,7 @@ app = connexion.App(__name__, specification_dir="./")
 app.add_api("swagger.yml")
 
 if __name__ == "__main__":
-    room.init_room()
+    rooms.init_room()
     cherrypy.tree.graft(app, "/")
     cherrypy.server.unsubscribe()
     server = cherrypy._cpserver.Server()
